2007-11-28  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidCodeDuplicatedInSameClassRule.cs,
	AvoidCodeDuplicatedInSiblingClassesRule.cs, AvoidLongMethodsRule.cs,
	AvoidLongParameterListsRule.cs, AvoidLargeClassesRule.cs,
	AvoidSpeculativeGeneralityRule.cs: Avoid instantiating MessageCollection
	unless we use it for returning a message.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Expression.cs: When overriding the Equals method, if the value is
	null, then return false.  Fixes the EqualShouldHandleNullArgRule
	violation.

2007-10-19  Nestor Salceda  <nestor.salceda@gmail.com>

	* Utilities.cs: Marked this class as static for avoid uninstantiated
	internal class rule violation.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Smells.mdp: Update project file.
	* Makefile.am: Use nunit-console2 to run the unit tests.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells.mdp:  Removed empty directory entry in the
	MonoDevelop project file.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells.mdp:  New.  Created MonoDevelop project file for
	the smell rules.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells.xml.in:  Added Uri for these rules.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidCodeDuplicatedInSameClassRule.cs,
	AvoidCodeDuplicatedInSiblingClassesRule.cs, AvoidLargeClassesRule.cs,
	AvoidLongMethodsRule.cs, AvoidLongParameterListsRule.cs,
	AvoidSpeculativeGeneralityRule.cs, CodeDuplicatedLocator.cs,
	Expression.cs, ExpressionFillerVisitor.cs, Utilities.cs:  Added svn
	propset svn:eol-native.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Build Gendarme.Rules.Smells rules and tests.
	* Gendarme.Rules.Smells.xml.in: New.  Configuration for
	Gendarme.Rules.Smells.
	* AvoidCodeDuplicatedInSameClassRule.cs,
	AvoidCodeDuplicatedInSiblingClassesRule.cs, AvoidLargeClassesRule.cs,